--- a/src/main.css
+++ b/src/main.css
@@ -15,3 +15,19 @@ body {
   height: 100%;
   width: 100%;
 }
+
+.infospot {
+  background-color: white;
+  border-radius: 3px;
+  width: 30%;
+  font-family: 'avenir', Arial, Helvetica, sans-serif;
+  padding: 0px 20px;
+}
+
+.info-title {
+  font-weight: 500;
+}
+
+.info-text {
+
+}
