--- a/src/main.css
+++ b/src/main.css
@@ -1,19 +1,31 @@
 html {
-  height: 100vh;
-  width: 100vw;
   overflow-y: hidden;
 }
 
 body {
   padding: 0;
   margin: 0;
-  height: 100%;
-  width: 100%;
+  --info-pane-width: 300px;
+  --info-pane-padding: 40px;
+  --info-pane-total: calc(var(--info-pane-width) + var(--info-pane-padding) * 2);
+}
+
+#container {
+  height: 100vh;
+  width: 100vw;
+}
+
+h1 {
+  color: darkslategrey;
+  text-align:center;
 }
 
 #root {
   height: 100%;
   width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .infospot {
@@ -28,5 +40,39 @@ body {
   font-weight: 500;
 }
 
-.info-text {
+.infoPane {
+  padding: var(--info-pane-padding);
+  height: 100%;
+  width: var(--info-pane-width);
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-family: 'avenir', Arial, Helvetica, sans-serif;
+  transform: translate(0, 0);
+  overflow: scroll;
+  z-index: 1;
+  transition: 0.4s ease;
+  background-color: white;
+}
+
+.infoPane img {
+  margin-top: 50px;
+  width: var(--info-pane-total);
+  position: relative;
+  left: calc(-1 * var(--info-pane-padding));
+  height: auto;
+}
+
+.hidePane {
+  transform: translateX(calc(-1 * var(--info-pane-total)));
+}
+
+#toggle {
+  position: absolute;
+  right: 0;
+  border: none;
+  height: 50px;
+  width: 50px;
+  cursor: pointer;
+  z-index: 1;
 }
