--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,6 @@
+/*TODO: better compatibility between mobile/desktop. Bandaid temp fix for width currently which
+        looks okay on mobile, but not great on desktop (sidebar too narrow). */
+
 html {
   overflow-y: hidden;
 }
@@ -5,8 +8,8 @@ html {
 body {
   padding: 0;
   margin: 0;
-  --info-pane-width: 300px;
-  --info-pane-padding: 40px;
+  --info-pane-width: 230px;
+  --info-pane-padding: 35px;
   --info-pane-total: calc(var(--info-pane-width) + var(--info-pane-padding) * 2);
 }
 
@@ -52,7 +55,7 @@ h1 {
   overflow: scroll;
   z-index: 1;
   transition: 0.4s ease;
-  background-color: white;
+  background: rgba(255, 255, 255, 0.95)
 }
 
 .infoPane img {
