--- a/src/main.css
+++ b/src/main.css
@@ -17,7 +17,7 @@ body {
 
 h1 {
   color: darkslategrey;
-  text-align:center;
+  text-align: center;
 }
 
 #root {
@@ -28,20 +28,14 @@ h1 {
   right: 0;
 }
 
-.infospot {
-  background-color: white;
-  border-radius: 3px;
-  width: 30%;
-  font-family: 'avenir', Arial, Helvetica, sans-serif;
-  padding: 0px 20px;
-}
-
 .info-title {
   font-weight: 500;
 }
 
-.infoPane {
-  padding: var(--info-pane-padding);
+#infoPane {
+  display: block;
+  padding: 0 var(--info-pane-padding);
+  padding-top: 32px;
   height: 100%;
   width: var(--info-pane-width);
   position: absolute;
@@ -55,16 +49,31 @@ h1 {
   background-color: white;
 }
 
-.infoPane img {
-  margin-top: 50px;
+#infoPane img {
+  margin-top: 20px;
   width: var(--info-pane-total);
   position: relative;
   left: calc(-1 * var(--info-pane-padding));
   height: auto;
 }
 
+#poiClose {
+  fill: #ccc;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  transition: fill 0.3s;
+}
+
+#poiClose:hover {
+  cursor: pointer;
+  fill: #bbb;
+}
+
 .hidePane {
-  transform: translateX(calc(-1 * var(--info-pane-total)));
+  transform: translateX(calc(-1 * var(--info-pane-total))) !important;
 }
 
 #toggle {
