--- a/src/map/map.css
+++ b/src/map/map.css
@@ -1,37 +1,37 @@
 #map {
-  position: absolute;
-  bottom: 30px;
-  left: 30px;
-  width: 20vw;
-  max-width: 300px;
-  min-width: 150px;
-  height: 20vw;
-  max-height: 300px;
-  min-height: 150px;
-  border-radius: 3px;
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    width: 20vw;
+    max-width: 300px;
+    min-width: 150px;
+    height: 20vw;
+    max-height: 300px;
+    min-height: 150px;
+    border-radius: 3px;
 }
 
 .marker {
-  background-image: url('Location.png');
-  background-size: cover;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
+    background-image: url('Location.png');
+    background-size: cover;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
 }
 
 #current-marker {
-  background-image: url('MapsGuy.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position-x: left 6px;
-  background-position-y:  20%;
-  width: 60px;
-  height: 60px;
-  z-index: 1;
+    background-image: url('MapsGuy.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position-x: centre;
+    background-position-y: centre;
+    width: 60px;
+    height: 60px;
+    z-index: 1;
 }
 
 @media screen and (max-width: 750px) {
-  .mapboxgl-compact {
-    display: none !important;
-  }
+    .mapboxgl-compact {
+        display: none !important;
+    }
 }
