Add loading indicator

--- a/src/main.css
+++ b/src/main.css
@@ -149,3 +149,17 @@ h1 {
   height: 25px;
   width: auto;
 }
+
+#loader {
+  -webkit-animation:spin 0.7s linear infinite;
+  -moz-animation:spin 0.7s linear infinite;
+  animation:spin 0.7s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+.hidden {
+  display: none
+}
