--- a/src/main.css
+++ b/src/main.css
@@ -54,6 +54,11 @@ h1 {
   margin-bottom: 20px;
 }
 
+#infoPane figcaption {
+  color: #444;
+  font-size: 13px;
+}
+
 #infoPane img {
   width: calc(var(--info-pane-total) - var(--info-pane-padding) * 2);
   position: relative;
