--- a/src/map/map.css
+++ b/src/map/map.css
@@ -4,10 +4,10 @@
   left: 30px;
   width: 20vw;
   max-width: 300px;
-  min-width: 150px;
+  min-width: 100px;
   height: 20vw;
   max-height: 300px;
-  min-height: 150px;
+  min-height: 100px;
   border-radius: 3px;
 }
 
@@ -20,17 +20,12 @@
 }
 
 #current-marker {
-  background-image: url('MapsGuy.png');
+  /* background-image: url('MapsGuy.png'); */
+  background-image: url('teddy-bear.png');
   background-repeat: no-repeat;
   background-size: contain;
-  background-position-x: left 8px;
-  width: 35px;
-  height: 35px;
+  background-position-x: left 2px;
+  width: 30px;
+  height: 30px;
   z-index: 1;
-}
-
-@media screen and (max-width: 750px) {
-  .mapboxgl-compact {
-    display: none !important;
-  }
 }
