Reid photo for id=23

--- a/src/map/map.css
+++ b/src/map/map.css
@@ -20,7 +20,7 @@
 }
 
 #current-marker {
-  background-image: url('MapsGuy.png');
+  background-image: url('images.png');
   background-repeat: no-repeat;
   background-size: contain;
   background-position-x: left 8px;
